# mlxtk

./: .coafile  .ctags  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .prospector.yaml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  anaconda.yml  ctags.sh  format.sh  format_code  matplotlibrc  project.py  pylint.sh  pyproject.toml  remove_caches  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml
anaconda/: meta.yaml
changelogs/: v0.10.0.md  v0.3.1.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.5.3.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.7.1.md  v0.7.2.md  v0.7.3.md  v0.7.4.md  v0.7.5.md  v0.7.6.md  v0.7.7.md  v0.8.0.md  v0.8.1.md  v0.8.2.md  v0.8.3.md  v0.8.4.md  v0.8.5.md  v0.9.0.md
doc/: Makefile  api.rst  conf.py  index.rst  inout.rst  make.bat  project.rst  sge.rst  tasks.rst
doc/api/: cwd.rst  debug.rst  doit_compat.rst  dvr.rst  hashing.rst  inout.rst  lock.rst  log.rst  parameter_scan.rst  parameter_selection.rst  parameters.rst  plot.rst  settings.rst  sge.rst  simulation.rst  simulation_set.rst  systems.rst  tasks.rst  templates.rst  timing.rst  tools.rst  ui.rst  units.rst  util.rst  wave_function_db.rst
doc/source/: conf.py  grid.rst  index.rst  inout.rst  log.rst  parameters.rst  sge.rst
environments/: 0.3.0.yml
examples/: .gitignore  harmonic_trap.py  harmonic_trap_1b_spectrum.py  harmonic_trap_scan.py
examples/bose_bose/: .gitignore  gaussian_wells.py
examples/bose_hubbard/: main.py
examples/gauges/: .gitignore  compute_norb.sh  ho.py  ho_gauges.py  ho_him.py  report.html  report.py
examples/harmonic_trap/: .gitignore  Makefile  harmonic_trap.py  projector.py
examples/one_body/: spectrum.py  spectrum_from_spec.py
examples/scan/: dodo.py  harmonic_trap_scan.py  plot_gs_energy.py
examples/sqr/: .gitignore  bose_hubbard.py
examples/tensor_elements/: delta_spf.py  plot.py
examples/wave_function_db/: .gitignore  harmonic_gs.py  harmonic_quench.py
mlxtk/: __init__.py  cwd.py  date.py  debug.py  doit_compat.py  dvr.py  filesystem.py  hash.py  hashing.py  lock.py  log.py  mpl.py  operator.py  parameter_scan.py  parameter_selection.py  parameters.py  pid_file.py  primitive.py  process.py  project.py  qdtk_executable.py  rsync.py  scan.py  settings.py  sge.py  simulation.py  simulation_set.py  ssh.py  stringio.py  tabulate.py  tape.py  task.py  temporary_dir.py  timing.py  units.py  util.py  wave_function_db.py  wavefunction.py
mlxtk/analysis/: dmat1.py
mlxtk/doit_analyses/: __init__.py  collect.py  expval.py  fixed_ns.py  gpop.py  max_depletion.py  natpop.py  output.py  plot.py  video.py
mlxtk/inout/: __init__.py  compression.py  conversion.py  dmat.py  dmat1.py  dmat2.py  eigenbasis.py  eigenenergies.py  error.py  exp_val.py  expval.py  fixed_ns.py  g1.py  g2.py  gpop.py  hdf5.py  momentum_distribution.py  natpop.py  norbs.py  ns_table.py  one_body_operator_matrix.py  output.py  projection.py  psi.py  spectrum.py  tools.py
mlxtk/operator/: __init__.py  mb_operator_specification.py  operator_specification.py
mlxtk/plot/: __init__.py  argparser.py  container.py  cursor.py  dmat1.py  dmat2.py  energy.py  entropy.py  exp_val.py  expval.py  gpop.py  natpop.py  norm.py  output.py  overlap.py  plot.py  plot_gui.py  plot_program.py  qt5_plot.py
mlxtk/project/: __init__.py  project.py
mlxtk/scripts/: accept_cluster_keys.py  compute_dmat.py  create_slideshow.py  dmat2_gridrep.py  dmat2_gridrep_video.py  dmat2_slider.py  dmat_evec_slider.py  dmat_slider.py  dmat_spf_slider.py  fixed_ns.py  fixed_ns_table.py  gpop_model.py  gpop_slider.py  grab_1b_eigenfunction.py  grab_spfs.py  mlxtkenv.py  plot_dmat1.py  plot_dmat2.py  plot_energy.py  plot_energy_diff.py  plot_entropy.py  plot_entropy_diff.py  plot_expval.py  plot_expvals.py  plot_expvals_diff.py  plot_gpop.py  plot_gpop3d.py  plot_gpop_diff.py  plot_gpop_slider.py  plot_integrated_gpop_diff.py  plot_natpop.py  plot_natpop_diff.py  plot_natpop_vs_dmat_evals.py  plot_norm.py  plot_norm_diff.py  plot_overlap.py  plot_overlap_diff.py  plot_spfs.py  plot_spfs_vs_norbs.py  print_unit_system.py  (+11 more)
mlxtk/simulation/: __init__.py  base.py  cmd_clean.py  cmd_dry_run.py  cmd_graph.py  cmd_list.py  cmd_propagation_status.py  cmd_qdel.py  cmd_qsub.py  cmd_run.py  cmd_task_info.py
mlxtk/simulation_set/: __init__.py  base.py  cli.py  cmd_archive.py  cmd_clean.py  cmd_dry_run.py  cmd_list.py  cmd_list_tasks.py  cmd_lockfiles.py  cmd_propagation_status.py  cmd_qdel.py  cmd_qsub_array.py  cmd_run.py  cmd_run_index.py  cmd_task_info.py
mlxtk/systems/: __init__.py
mlxtk/tape/: __init__.py  nodes.py  square_lattice.py
mlxtk/task/: __init__.py  basis_projection.py  copy_wavefunction.py  expect.py  expectation_value.py  expval.py  fidelity.py  operator.py  plot.py  propagate.py  propagation.py  psi.py  relaxation.py  symlink.py  task.py  variance.py  wave_function.py  wave_function_manipulation.py  wavefunction.py
mlxtk/tasks/: __init__.py  expval.py  extract_psi.py  many_body_operator.py  mb_operator.py  momentum_distribution.py  number_state_analysis.py  operator.py  point_function.py  project_spf_basis.py  propagate.py  reduced_density_matrix.py  spectrum.py  task.py  variance.py  wave_function.py  wfn_bose_bose.py  wfn_mcthdb.py  wfn_ml_mctdh.py  wfn_spin_half.py  wfn_sqr.py
mlxtk/templates/: __init__.py  convergence_report.j2  sge_array.j2  sge_epilogue.j2  sge_job.j2  sge_stop.j2
mlxtk/tools/: __init__.py  compressed_sensing.py  correlation.py  diagonalize.py  entropy.py  fit.py  gpop.py  gpop_diff.py  natpop_diff.py  ns_table.py  operator.py  parity.py  reduced_density_matrix.py  signal.py  signal_diff.py  table.py  tensors.py  terminal.py  video.py  wave_function.py  wave_function_manipulation.py
mlxtk/ui/: __init__.py  dmat_evec_slider.ui  dmat_spf_slider.ui  (+6 more)
operators/: H_1b.op  H_initial.op  H_quenched.op
scripts/: plot_dmat2.py  plot_energy.py  plot_gpop.py  plot_natpop.py  plot_norm.py
tests/: test_tape.py
tools/: coala_docker  coala_docker_apply  format-code  format_code  generate_requirements  mypy  pre-commit  prospector  pylint  remove_caches
(+71 files in other folders)
