[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "mlxtk"
version = "0.8.0"
description = "Toolkit to design, run and analyze ML-MCTDH(X) simulations"
authors = ["Fabian Köhler <fkoehler@physnet.uni-hamburg.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/f-koehler/mlxtk"
homepage = "https://github.com/f-koehler/mlxtk"
documentation = "https://github.com/f-koehler/mlxtk"
keywords = ["physics", "quantum", "dynamics", "ML-MCTDHX", "MCTDHB", "MCTDHF", "dataflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics"
]
include = [
    "changelogs"
]

[tool.poetry.dependencies]
colorama = "^0.4"
doit = "^0.32"
# doit-graph = "^0.3"
future = "^0.18"
h5py = "^2.10"
jinja2 = "^2.10"
matplotlib = "^3.1"
# numba = ">=0.43.1,<0.47.0"
numpy = "^1.17"
numpy-stl = "^2.10"
pandas = "^0.25"
pathos = "^0.2"
python = ">3.6,<3.8"
pyside2 = "^5.13"
pyyaml = "^5.1"
scipy = "^1.3"
sympy = "^1.4"
tabulate = "^0.8"
tqdm = "^4.39"

[tool.poetry.dev-dependencies]
isort = "^4.3"
mypy = "*"
pylint = "*"
tuna = "*"
typed-ast = "*"
yapf = "^0.29"

[tool.poetry.scripts]
animate_dmat2 = "mlxtk.scripts.animate.dmat2:main"
animate_g1 = "mlxtk.scripts.animate.g1:main"
animate_g2 = "mlxtk.scripts.animate.g2:main"
animate_gpop = "mlxtk.scripts.animate.gpop:main"

compute_dmat = "mlxtk.scripts.compute.dmat:main"
compute_dmat2 = "mlxtk.scripts.compute.dmat2:main"
compute_g1 = "mlxtk.scripts.compute.g1:main"
compute_g2 = "mlxtk.scripts.compute.g2:main"

slider_dmat_gridrep = "mlxtk.scripts.slider.dmat_gridrep:main"
slider_dmat_spfrep = "mlxtk.scripts.slider.dmat_spfrep:main"
slider_dmat2_gridrep = "mlxtk.scripts.slider.dmat2_gridrep:main"
slider_dmat2_spfrep = "mlxtk.scripts.slider.dmat2_spfrep:main"
slider_g1 = "mlxtk.scripts.slider.g1:main"
slider_g2 = "mlxtk.scripts.slider.g2:main"
slider_gpop = "mlxtk.scripts.slider.gpop:main"

create_slideshow = "mlxtk.scripts.create_slideshow:main"
dmat2_gridrep = "mlxtk.scripts.dmat2_gridrep:main"
dmat2_gridrep_video = "mlxtk.scripts.dmat2_gridrep_video:main"
dmat_evec_slider = "mlxtk.scripts.dmat_evec_slider:main"
dmat_spf_slider = "mlxtk.scripts.dmat_spf_slider:main"
fixed_ns = "mlxtk.scripts.fixed_ns:main"
fixed_ns_table = "mlxtk.scripts.fixed_ns_table:main"
gpop_model = "mlxtk.scripts.gpop_model:main"
mlxtkenv = "mlxtkenv_script:main"

plot_energy = "mlxtk.scripts.plot.energy:main"
plot_energy_diff = "mlxtk.scripts.plot.energy_diff:main"
plot_entropy = "mlxtk.scripts.plot.entropy:main"
plot_entropy_diff = "mlxtk.scripts.plot.entropy_diff:main"
plot_expval = "mlxtk.scripts.plot.expval:main"
plot_gpop = "mlxtk.scripts.plot.gpop:main"
plot_natpop = "mlxtk.scripts.plot.natpop:main"
plot_natpop_vs_dmat_evals = "mlxtk.scripts.plot.natpop_vs_dmat_evals:main"
plot_spfs = "mlxtk.scripts.plot.spfs:main"
plot_spfs_vs_norbs = "mlxtk.scripts.plot.spfs_vs_norbs:main"

print_unit_system = "mlxtk.scripts.print_unit_system:main"

recreate_output = "mlxtk.scripts.recreate_output:main"

scan_plot_depletion = "mlxtk.scripts.scan_plot.depletion:main"
scan_plot_energy = "mlxtk.scripts.scan_plot.energy:main"
scan_plot_expval = "mlxtk.scripts.scan_plot.expval:main"
scan_plot_gpop = "mlxtk.scripts.scan_plot.gpop:main"
scan_plot_natpop = "mlxtk.scripts.scan_plot.natpop:main"

spectrum_1b = "mlxtk.scripts.spectrum_1b:main"
thin_out_psi = "mlxtk.scripts.thin_out_psi:main"
